--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
 
 body nav { 
 	background-width: 100%;
-	height:100px;
+	/*height:100px;*/
+	color:white;
 	text-align: center;
 	border: 5px solid #7e7e7e;
 	background: #2036a9; /* For browsers that do not support gradients */
@@ -84,4 +85,28 @@ a:visited{color:red;}
 .text{
 	font-size:18px;
 	margin: 0px 5px 15px 15px;
+}
+/* Responsive */
+@media screen and (max-width: 720px) {
+	.item{
+		margin: 0px 0px 10px 0px;
+	}
+
+	#MainContainer{
+		width:95%;
+		margin:auto;
+		margin-top:20px;
+	}
+	
+	#LeftContent{
+		position:static;
+		float:left;
+		width:100%;
+		margin: 0px 0px 0px 0px;
+	}
+	#RightContent{
+		float:left;
+		margin: 0px 0px 0px 0px;
+		width:100%;
+	}
 }
