--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ td{
 	width:33%;
 }
 
+td img {
+	width: 80%;
+	display:block;
+	margin:auto;
+	margin-bottom: 10px;
+}
+
 body nav { 
 	background-width: 100%;
 	min-height:80px;
@@ -73,21 +80,15 @@ a:visited{color:red;}
 	font-size:20px;
 }
 .maintext{
-	font-size:18px;
+	font-size:20px;
 }
 .item{
-	font-size:18px;
+	font-size:20px;
 	margin: 0 25% 0 0 ;
 	color:#fefefe;
 	background-color:#272830;
 	border-top: 1px solid #7e7e7e;
 	padding:5px 5px 5px 5px;
-}
-.item img {
-	width: 75%;
-	display:block;
-	margin:auto;
-	margin-bottom: 10px;
 }
 
 .centeredtext{
@@ -98,7 +99,7 @@ a:visited{color:red;}
 }
 
 .info{
-	font-size:18px;
+	font-size:20px;
 	margin: 0px 0% 2% 10%;
 	color:#fefefe;
 	padding:5px 5px 5px 5px;
